--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,3 @@
-
 .container {
 	width: 700px;
 	margin: auto;
@@ -9,7 +8,12 @@
 	border: 1px solid #CCC;
 	line-height: 2;
 	font-size: 1.4em;
-	font-family: verdana, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
+}
+
+h1 {
+	font-weight: normal;
+	margin: 5px 0px;
 }
 
 input, button {
@@ -21,7 +25,8 @@ input, button {
 
 button {
 	background: #DA192A;
+	margin-top: 10px;
 	color: white;
 	text-transform: uppercase;
-	font-size: 1em;
+	font-size: 0.8em;
 }
